# SmallMicroserviceController

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/Rest/: HttpKeyValueDbEngine.cpp  HttpKeyValueDbEngine.h  MicrosvcController.cpp  MicrosvcController.h  RestCommon.h  RestDbServiceServer.cpp  RestDbServiceServer.h  RestUtility.cpp  RestUtility.h
